--- a/starwars/src/App.css
+++ b/starwars/src/App.css
@@ -6,3 +6,35 @@
   text-shadow: 1px 1px 5px #fff;
 }
 /* write your parent styles in here for your App.js */
+.list-box {
+  width: 100%;
+  max-width: 800px;
+  margin: auto;
+  text-align: center;
+  justify-content: center;
+}
+
+.character-box {
+  border: 1px solid black;
+  border-radius: 10px 0 10px 0;
+  max-width: 300px;
+  margin: 1rem auto;
+  box-shadow: 0 9px 15px 0 black;
+  transition: 0.3s;
+}
+
+.character-info {
+  padding: 1rem;
+  color: white;
+  background-color: grey;
+  border-radius: 10px 0 10px 0;
+
+}
+
+.character-info  h4{
+  margin: 5px auto;
+}
+
+.character-info  span{
+
+}
